<resources>
    <string name="app_name">فرمول‌نویسی‌لعاب‌ تماشاخانه‌توسکاوود</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">جست و جو</string>
    <string name="_0">0</string>
    <string name="add_item">اضافه کردن آیتم</string>
    <string name="total">مجموع:</string>
    <string name="material">مواد تشکیل دهنده</string>
    <string name="amount">مقدار</string>
    <string name="id">Id</string>
    <string name="save">ذخیره</string>
    <string name="formula_id">آیدی فرمول</string>
    <string name="create">ایجاد</string>
    <string name="formula_name">نام فرمول</string>
    <string name="already_exist_ّFormula">این فرمول قبلا ایجاد شده است!</string>
    <string name="already_exist_ّItem">آیتم تکراری است!!</string>
    <string name="successfully_saved"> ذخیره شد! </string>
    <string name="delete_dialog_title"> آیا مطمئن هستید؟ </string>
    <string name="delete_dialog_cancel"> لغو </string>
    <string name="delete_dialog_accept"> حذف </string>
    <string name="delete_dialog_message"> این فرمول برای همیشه حذف خواهد شد. آیا مطمین هستید میخواید آن را حذف کنید؟</string>
    <string name="code">کد</string>
    <string name="enter_value_convert">مقدار را برای تبدیل وارد کنید</string>
    <string name="convert_button">تبدیل</string>
    <string name="formula_name2">نام فرمول:</string>
    <string name="must_be_filled">پر کردن این فیلد الزامی است!</string>
    <string name="item_added">آیتم اضافه شد!</string>
    <string name="item_changed">آیتم ویرایش شد!</string>
    <string name="about"> درباره ما</string>
    <string name="tooskawood_ir"><u>tooskawood.ir</u></string>
    <!-- calc-->
    <string name="ac" translatable="false">AC</string>
    <string name="value_update" translatable="false">+/-</string>
    <string name="percentage" translatable="false">%</string>
    <string name="divide" translatable="false">÷</string>
    <string name="divide_operator" translatable="false">/</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>
    <string name="multiply" translatable="false">x</string>
    <string name="multiply_expression" translatable="false">*</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="plus" translatable="false">+</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="minus" translatable="false">-</string>
    <string name="zero" translatable="false">0</string>
    <string name="comma" translatable="false">,</string>
    <string name="comma_expression" translatable="false">.</string>
    <string name="equals" translatable="false">=</string>

    <!-- Messages -->
    <string name="invalid_expression_message">نامعتبر</string>
</resources>